* 2013-04-12 - marcus.klein@open-xchange.com

 - Fix for bug 25819: Changing the IMAP server, IMAP login and SMTP server is now possible for user objects.

* 2013-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 25808: Fixed sending documents as mail attachments
 - Fix for bug 25802: Trying to bypass parsing a message from stream
 - Fix for bug 25792: Deal with possibly non-mail-safe E-Mail addresses
 - Fix for bug 24519: Ignore "@Open-Xchange" suffix during Content-Id look-up
 - Fix for bug 25806: Proper cache invalidation

* 2013-04-08 - thorben.betten@open-xchange.com

 - Fix for bug 25753: Sane Content-Type value

* 2013-04-08 - marc.arens@open-xchange.com

 - Fix for bug: 25039 - Files: Uploading a new file version of 10MB times out without user notification
 - Fix for bug: 25474 - Unexpected error: null when sending mail
 - Fix for bug: 25285 - publication api always returns http as protocol

* 2013-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 25715: Check if specified quota is in allowed range for INT(10) UNSIGNED
 - Fix for bug 19150: Check existence of appropriate property on bundle start-up
 - Fix for bug 25732: Lowered log level for commonly raised "Folder not found" error code

* 2013-04-06 - thorben.betten@open-xchange.com

 - Fix for bug 25727: Added authentication to publication tools
 - Fix for bug 25723: Added null guard
 - Fix for bug 25724: Added validation check to quota arguments
 - Fix for bug 25224: Changed category accordingly

* 2013-04-05 - marcus.klein@open-xchange.com

 - Fix for bug 24876: Attachment list requests respect now the optional time zone parameter.
 - Fix for bug 25705: Removing read permissions for all users on upsell.properties configuration file.
 - Fix for bug 25710: Corrected access limitations for SOAP interface in apache proxy example configuration files.
 - Fix for bug 25091: Added dependency on open-xchange-parallels-gui or open-xchange-meta-ui-appsuite.